Improved the text-alignment issue in the view-itinerary modal.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,3 +25,13 @@
 	height: 40px;
 	padding-left: 15px;
 }
+
+.alignleft {
+    float: right;
+    
+
+}
+
+#itineraryRow {
+    margin-right: 40px;
+}
